k8s/overlays/staging/db-statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: voting-app
spec:
  template:
    spec:
      containers:
      - name: db
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: gp2
      resources:
        requests:
          storage: 1Gi
