k8s/overlays/staging/vote-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  namespace: voting-app
spec:
  template:
    spec:
      containers:
      - name: vote
        image: "678511326942.dkr.ecr.eu-central-1.amazonaws.com/voting-app-vote"
        imagePullPolicy: Always
        resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 100m
              memory: 512Mi
